kubernetes/apps/monitoring/kube-prometheus-stack/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  hosts:
    - prometheus.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
